--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,17 @@
   font-display: swap;
 }
 
+/* Chat input textarea sizing */
+.chat-input-textarea {
+  height: 144px;
+  min-height: 144px;
+  max-height: 240px;
+  box-sizing: border-box;
+  overflow-y: auto;
+  transition: height 0.1s ease-out;
+  line-height: 1.5;
+}
+
 /* Animation delay utilities */
 .animation-delay-300 {
   animation-delay: 300ms;
